fix dark mode mobile menu issue

--- a/src/Components/Menu/menu.css
+++ b/src/Components/Menu/menu.css
@@ -18,7 +18,7 @@
 
 .animateMenu {
   display: block;
-  top: -500px;
+  top: -1000px;
   transition: all 0.5s ease-in-out;
 }
 
